--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -31,6 +31,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+      <style>
+        .center{
+          margin-left: 25%;
+        }
+      </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
